--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Testisivu</h1>
 
+    Luku: <input type="number" id="luku" value=10>
+    <p>Syötä luku ja paina nappia.</p>
+    <button onclick="omaFunktio()">Laske</button>
+
+    <p>Tulos on: <span id="tulos"></span></p>
+    
     <script src=".\app.js"></script>
 </body>
 </html>
