--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 </head>
 <body>
     <h1>Testisivu</h1>
-
-    Luku: <input type="number" id="luku" value=10>
+    <label for="luku">Luku:</label>
+    <input type="number" id="luku" value=10>
     <p>Syötä luku ja paina nappia.</p>
     <button onclick="omaFunktio()">Laske</button>
 
     <p>Tulos on: <span id="tulos"></span></p>
     
+    <div class="lotto"></div>
     <script src=".\app.js"></script>
 </body>
 </html>
